# fundamentos-de-analise-de-dados

./: .gitignore  README.md  pyproject.toml
trabalho1/data/: yeast.data.csv  yeast.names.txt
trabalho1/src/: fad_trab_1.ipynb
